--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@google-cloud/storage": "^2.4.2",
     "@ionic-native/core": "~4.18.0",
     "@ionic-native/splash-screen": "~4.18.0",
     "@ionic-native/status-bar": "~4.18.0",
     "@ionic/storage": "2.2.0",
     "firebase": "^5.8.3",
+    "firebase-admin": "^7.0.0",
+    "firebase-functions": "^2.2.0",
     "ionic-angular": "3.9.3",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
